[package]
name = "recommenders"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
license = "MIT"
description = "Recommenders - a fork of sbr"
repository = "https://github.com/apibillme/recommenders"
readme = "README.md"
exclude = ["data.csv"]
edition = "2018"

[dependencies]
serde = { version = "1.0.0", features = ["rc", "derive"] }
bincode = "1"
rand = { version = "0.5", features = ["serde1"] }
itertools = "0.10"
rayon = "1.0.0"
ndarray = { version = "0.15", features = ["serde-1"] }
siphasher = "0.3"
failure = "0.1.1"
reqwest = { version = "0.11" }
csv = { version = "1" }
async-std = { version = "1.9.0", features = ["attributes"] }
wyrm = { version = "0.9.1", features = ["fast-math"]}

[dev-dependencies]
serde_json = "1.0"
criterion = "0.3"
ndarray = { version = "0.15", features = ["blas", "serde-1"] }
blas-src = { version = "0.8", default-features = false, features = ["intel-mkl"] }
